main-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainapp
  template:
    metadata:
      labels:
        app: mainapp
    spec:
      volumes: # Define volume
        - name: mainapp-volume
          persistentVolumeClaim:
            claimName: mainapp-claim
      containers:
        - name: main-app-writer
          image: yves6000/main-app-writer:1.3
          volumeMounts: # Mount volume
            - name: mainapp-volume
              mountPath: /usr/src/app/files
        - name: main-app-reader
          image: yves6000/main-app-reader:1.8
          volumeMounts: # Mount volume
            - name: mainapp-volume
              mountPath: /usr/src/app/files
