main-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainapp-svc
  namespace: main-namespace
spec:
  type: ClusterIP
  selector:
    app: mainapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
