main-app/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mainapp-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: mainapp-svc
              servicePort: 2345
#          - path: /pingpong
#            backend:
#              serviceName: pingpong-app-svc
#              servicePort: 2346
